[package]
name = "gbc-image-transform"
version = "0.1.0"
edition = "2021"
description = "Generate Game Boy Color lookalike image from an image."

[dependencies]
# for easier error handling
anyhow = "1.0.74"

# for parsing command line arguments
clap = { version = "4.3.21", features = ["derive"] }

# for reading and writing PNG images
image = "0.24.7"

# for calculating reduced color palettes
kmeans_colors = "0.6.0"
palette = "0.7.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
