[package]
name = "gbc-image-transform"
version = "0.2.3"
edition = "2021"
description = "Generate Game Boy Color lookalike image from an image."

[dependencies]
# for easier error handling
anyhow = "1.0.95"

# for parsing command line arguments
clap = { version = "4.5.28", features = ["derive"] }

# for reading and writing PNG images
image = "0.25.5"

# for calculating reduced color palettes
kmeans_colors = "0.6.0"
palette = "0.7.6"
rayon = "1.10.0"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
codegen-units = 1
lto = true
strip = true
